Downloads/project_fl-a/test/parser/bad/a_bad_class_indent.py
# RUN: %chocopy-llvm %s 2>&1 | FileCheck %s.err

class A(B):
x:int = 1
